# gatews

.github/workflows/: python-publish.yml  workflow.yml
go/: response_future.go  response_spot.go
go/_examples/: main.go
go/model/: future_order.go  spot_order.go
go/resp/: order.go
python/: README.md  publish.sh  setup.cfg  setup.py
python/examples/: README.md
